<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/itemLin"
        style="@style/itemListStyle"
        android:gravity="center"
        android:minHeight="30dp"
        android:orientation="horizontal"
        android:visibility="visible" >

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/orderText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/dateText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/lend_date_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/departmentText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/accept_department_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/nameText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/query_material_name" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/totalText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/count_hint" />

        <View style="@style/shortLineStyle" />
        
        <TextView
            android:id="@+id/unitText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/unit_text_hint" />

        <View style="@style/shortLineStyle" />



        <TextView
            android:id="@+id/getMaterialPersonText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/get_material_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/appliedOrderText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/applied_order_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/remarksText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/remarks" />

        <View style="@style/shortLineStyle" />
    </LinearLayout>

</LinearLayout>