<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/itemLin"
        style="@style/itemListStyle"
        android:gravity="center"
        android:minHeight="30dp"
        android:orientation="horizontal"
        android:visibility="visible" >

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/orderText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/lendNumberText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/out_number" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/nameText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/apply_material_name"
            android:visibility="gone" />

        <View
            style="@style/shortLineStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/countText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/count_hint"
            android:visibility="gone" />

        <View
            style="@style/shortLineStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/dateText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/appply_time_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/userText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/appply_person_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/purposeText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/use_purpose_text" />

        <View style="@style/shortLineStyle" />

        <TextView
            android:id="@+id/statueText"
            style="@style/textStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/status_text" />

        <View style="@style/shortLineStyle" />
    </LinearLayout>

</LinearLayout>